# webapp-memboost

./: CHANGELOG.md  Cargo.toml  Dioxus.toml  Makefile
resources/android/res/drawable/: fav.xml
scripts/: android-webview-assets-params.toml
src/: main.rs
src/components/: memboost.rs  mod.rs
