[package]
name = "memboost"
version = "0.1.1"
authors = ["aki <aki.akaguma@hotmail.com>"]
edition = "2021"
description = """
Temporarily increases the amount of memory used and evicts other memory, thereby increasing free memory.
"""
keywords = ["webapp"]
categories = ["desktop", "android"]
#license = "MIT OR Apache-2.0"
readme = "README.md"
build = "build.rs"
rust-version = "1.90.0"
repository = "https://github.com/aki-akaguma/webapp-memboost"

[dependencies]
# dioxus family
dioxus = { version = "0.7.6", features = ["fullstack"] }
dioxus-desktop = { version = "0.7.6", optional = true }

# what dioxus depends on
# what dioxus depends on, optional

# other, optional
console_error_panic_hook = { version = "0.1", optional = true }

# other
sysinfo = "0.38.2"
async-sleep-aki = "0.1"

[target.'cfg(target_os = "android")'.dependencies]
openssl = { version = "0.10", features = ["vendored"] }

[build-dependencies]
rust-version-info-file = "0.2"

[features]
default = []

web = ["dioxus/web", "dep:console_error_panic_hook"]
desktop = ["dioxus/desktop", "dep:dioxus-desktop"]
mobile = ["dioxus/mobile"]
server = ["dioxus/server"]

debian_build = []

[profile.release]
strip = "debuginfo"
opt-level = "s"
lto = true
